--- a/v2/about/designer-asurion.html
+++ b/v2/about/designer-asurion.html
@@ -72,6 +72,10 @@
                     <li>Insurance service platforms</li>
                     <li>Call center chat tools</li>
                 </ul>
+                <h3>UX & Product Teams</h3>
+                <p>In my role at Asurion I have acted as a lead and mentor within a team of 10-15 designers and researchers.</p>
+                <p>The UX team compromises a design director, manager, 4 senior designers,  6-8 designers as well as a 3 UX researchers.</p>
+                <p>Projects are agile and incorporate roadmap, backlog and regular sprint releases. Communication with UX, PM, Engineers, PA and QA teams are occur with regular syncs, standups and the usual weekly ceremonies.</p>
             </div>
             <div class="column">
                 <span class="wrap"><span class="img bg-non"></span></span>
@@ -80,28 +84,43 @@
 
         <div class="column-container col1">
             <div class="column">
-                <h3>UX & Product Teams</h3>
-                <p>The UX team compromises a design director, manager, 4 senior designers,  6-8 designers as well as a 3 UX researchers.</p>
-                <p>Projects are agile with regular sprint releases. Communication with UX, PM, Engineers and stakeholders is daily with regular syncs, Standups and the usual weekly xxx meetings.</p> 
+                
                 <h3>Responsibilities</h3>
+                <p>I’m a design generalist with a strong technical ability which has seen me take the lead on regular design sprints for core projects and also be dropped into new projects or tasks lacking resources with ease.</p>
+                <h4>Day to Day Design</h4>
+                <p>I take part in the end to end design process for various sprint based design tasks - including synthesis, discovery, concept design and handoff.</p>
+                <p>I am also tasked with prototypes, illustration, animations, marketing material, video editting when the skill is needed.</p>
+                <h4>Communication</h4>
+                <ul>
+                    <li>Design Review of ongoing design tasks within a weekly design jam.</li>
+                    <li>Lead Designer on assigned tasks speaking to PM and DEV team members.</li>
+                    <li>Mentorship of junior designers.</li>
+                    <li>Anticipating future needs and initiate upstream design tasks and communication to wider team.</li>
+                </ul>
+                <h4>Technical</h4>
+                <ul>
+                    <li>DesignOps for Figma Projects, Design Systems, Userflow, Toolkits and Templates.</li>
+                    <li>Rapid ideation & iteration tasks.</li>
+                    <li>Creation of Interactive Prototypes for sprint based Usability tests built from a prototype template.</li>
+                </ul>
             </div>
             <div class="column"></div>
         </div>
 
-        <div class="column-container col1">
-            <div class="column">
-                <h3>Collaboration & Communication</h3>
-                <p>text</p>>
-            </div>
-            <div class="column"></div>
-        </div>
 
         <div class="column-container col1">
             <div class="column">
                 <h3>Challenges</h3>
-                <p>text</p>
+                <p>Asurion is a much larger organization than I had previously worked at and also consideration for client needs is very important. With a large decision making chain it's been difficult to make to this I have needed to advocate user needs and develop alliances more to get design centric solutions off the ground.</p>
+                <p>Asurion is a much larger organization than I had previously worked at and also consideration for client needs is very important. With a large decision making chain it's been difficult to make to this I have needed to advocate user needs and develop alliances more to get design centric solutions off the ground.</p>
+                
                 <h3>Acheievements</h3>
-                <p></p>
+                <ul>
+                    <li>Lead the design process for the continuous improvement task which saw a 20% increase in MAU over a 1 year period.</li>
+                    <li>Lead the end to end design process for the Tsukasapo ‘Learning Program’ feature which saw a 15% increase in retention rate KPI over a 4 month period.</li>
+                    <li>Streamlined the localization of the Asurion US teams photo app for the au Photo Cloud project.</li>
+                    <li>Advocated the adoption of A/B Testing and improved user behavior analysis via Google Analytics.</li>
+                </ul>
             </div>
             <div class="column"></div>
         </div>
