--- a/v2/about/designer-developer.html
+++ b/v2/about/designer-developer.html
@@ -65,32 +65,27 @@
             <h2>Working as a Designer and Developer</h2>
             <p>From 2006 to 2016 I worked as both a designer and front end developer for a bookings organization with products in the UK, AU and US markets.</p>
         
-            <h3>Cultivating a Diverse Design Skill Set</h3>
-            <p>Over a ten year period I was able to lead many different design tasks while experiencing the challenges that came with it. These tasks ranged from App design, Responsive design, HTML emails, branding and print media . </p>
-            <p>Tasks were often repeated for new iterations or completely new projects which meant I was able to learn from past challenges and hone my approaches for each skill set.</p>
-            <p>As I balanced multiple tasks it was also necessary for me to optimize my workflow by refining my process to anticipate potential risks and factor in scalability requirements.</p>
+            <h3>Multi platform product & Product Ownership </h3>
+            <p>During the 10 years I worked at the organization I lead the design of a product family which included more than 20 brands and upwards of 500 websites and apps.</p>
+            <p>The products were multi platform with projects including B2B and B2C responsive websites, web and native apps, social media, admin tools for internal and external clients as well as email and printed media.</p>
+            <p>The trust I developed empowered a strong sense for product ownership, design vision, refinement and planning ahead. These are skills I continue to advocate in my current role with the aim of integrating design thinking and a user first approach in product strategy.</p>
             </div>
             <div class="column"></div>
         </div>
         <div class="column-container col1">
             <div class="column">
-            <h3>Product Ownership</h3>
-            <p>As I was leading design and front end teams I took a lot of pride in maintaining systems and considering the future direction and vision of the products I worked on. </p>
-            <p>A business principle was to respond quickly and release often. Anticipating and working ahead of time were skills I needed to develop in regards to this, allowing design iterations to maintain consistency and flexibility as they progressed through changes.</p>
-
-            <h3>Multi platform product and scalable design system</h3>
-            <p>The products I worked on were part of a multi product family including more than 20 brands and upwards of 500 websites and apps.</p>
-            <p>Various platforms were also present including marketing and customer facing websites, apps, social media, admin tools for internal users and external clients as well as email and printed media.</p>
-            <p>To simplify management of this; design systems, UI components, screen templates, SaSS CSS systems were just a few of the items I needed to develop and maintain.</p>
+            <h3>A dynamic end to end Design, Development and Release process</h3>
+            <p>The product team followed an agile process with principles to think big, respond quickly and release often. I had hands on experience throughout the process including planning, discovery, design, front and backend implementation and QA testing.</p>
+            <p>Design Iterations would follow regularly with feedback being synthesised by a combination of Google Analytics and User Research from our customer base.</p>
+            <p>What I enjoyed the most was that the team worked to continuously improve the product. Once a new iteration or feature had been released plans for its improvement were already underway and being aligned with user behavior analysis.</p>
             </div>
             <div class="column"></div>
         </div>
         <div class="column-container col1">
             <div class="column">
-            <h3>Experience with tech stacks and risk management</h3>
-            <p>In addition to leading the design team I also worked as a front end developer at various times during my career. </p>
-            <p>I learnt various skills including CSS, JS, HTML, MySQL, PHP, SEO to name just a few. While these skills age over time and get replaced by newer tech the challenges I experienced and the repeated nature of these challenges has meant I have developed a great understanding and intuition for risk management. The insights I learnt are still applicable to this day and allow me to facility understanding when working alongside engineers, product managers and fellow designers.</p> 
-
+            <h3>An ongoing learning experience</h3>
+            <p>???</p>
+            
             <h3>Take aways from this period</h3>
             <p>I was able to work dynamically as part of a team and be at the fore of a culture of continuous improvement. At times we cut corners on QA and measuring data affectively. However this period of my career showed me what hard work can produce when a team gets to work.</p>
             <p>While I appreciate the processes and decision making steps I have learnt later in my career, I still and hopeful will continue trying to push the needle and see if we can do just a little bit more.</p>
