--- a/v2/about/formative-design.html
+++ b/v2/about/formative-design.html
@@ -78,8 +78,13 @@
             <div class="column">
                 <h3>Studying Product Design & developing a sense of composition while at University</h3>
                 <p>I was encouraged to pursue my creative interests which led me to study Product Design and Development at University in Manchester, UK. Whilst the course was primarily industrial design, it also crossed over into visual design, marketing and web design.</p>
-                <p>During this time I developed a keen interest in composition and user behavior.</p>
-        
+                <p>During this time I developed a keen interest in composition. The final stages of a product development cycle involved creating presentation boards to document features and information. I excelled in this area due to a growing interest in illustrator and 3D modeling software. I also had an interest in artists such as Kandinsky and Mondrian and took inspiration from their work to consider composition and layout in greater detail.</p>
+
+                <h3>Behaviour and empathy</h3>
+                <p>While I looked at finding optimal compositions which would capture a persons attention I also began to look more closely at my own behavior and at others. I wanted to resolve some of my internal conflicts and found that by analyzing other peoples actions I could better frame my own.</p>
+                <p>I developed interest in the psychology behind marketing and also remember looking closely at the techniques applied to store and supermarket layouts and how they influence a customers journey.</p>
+                <p>Developing an empathetic personality and user first approach have been important principles I have followed since and apply to my work and life.</p>
+
                 <h3>Travelling to Japan, experiencing a new culture and meeting my Wife.</h3>
                 <p>After completing my University course I travelled to Japan and worked for 18 months as a language instructor in Chiba. The culture, sensibilities and kindness I saw in Japan captivated me and during this time I would met my future wife. 
         
