--- a/v2/index.html
+++ b/v2/index.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div id="user-flow" class="article journal">
-                <h3 class="title">Understanding a Product it’s user flow and user’s behaviour </h3>
+                <h3 class="title">Understanding a Product, it’s user flow and user behaviour patterns</h3>
                 <p class="description">A clear understanding of a product, it's flows, screens and details allows you to design and iterate more effectively.</p>
                 <p><a href="journal/userflow-repository.html">Read the Journal</a></p>
                 <span class="img"></span>
