--- a/v2/journal/userflow-repository.html
+++ b/v2/journal/userflow-repository.html
@@ -80,10 +80,14 @@
                 <div class="column">
                     <h3>Measuring User Behavior patterns with Firebase Analytics</h3>
                     <p>Beyond the design, I delve into user behavior analysis. This involves examining user interactions with the product to identify usage patterns, preferences, and pain points. By understanding how users engage with the product, we can make informed decisions to optimize the user flow and enhance their experience.</p>
-                    <<ol>
+                    <ol>
                         <li><a href="ab-testing.html">Continously improving with A/B Testing</a></li>
                     </ol>
-
+                </div>
+                <div class="column"></div>
+            </div>
+            <div class="column-container col1">
+                <div class="column">
                     <h3>Streamlining User Flow Updates: The Power of Automation</h3>
                     <p>When I initially joined my current team, I was eager to make a positive impact. I noticed that the regular sprint user flow underwent frequent updates, often necessitating extensive manual adjustments for pixel precision and alignment. To streamline this process, I embarked on an initiative to introduce automation through auto layout techniques. I synchronized each screen using Figma's library and sync feature. While this automation introduced some complexity and required a bit of a learning curve for other team members when making edits, it didn't take long for them to appreciate the significant functionality and time-saving benefits it brought. </p>
                     <p>Over the course of a year, the screen repository has evolved into a valuable resource, enabling us to track changes efficiently and maintain a consistency in our work.</p>
