--- a/v2/journal/userflow-repository.html
+++ b/v2/journal/userflow-repository.html
@@ -61,13 +61,13 @@
     
     <div id="intro" class="section">
             <h2>Understanding a Product, it’s user flow and user behaviour patterns</h2>
-            <div class="column-container col1">
+            <div class="column-container col1 segment">
                 <div class="column">
                     <p>When I join a new team and encounter a product for the first time, my initial focus is on understanding its user flow. I want to grasp how users navigate through the product, what actions they take, and what they experience. It's about getting a clear picture of the product's functionality and user journey.</p>
                 </div>
                 <div class="column"></div>
             </div>
-            <div class="column-container col1">
+            <div class="column-container col1 segment">
                 <div class="column">
                     <h3>Heuristic Evaluations as My Compass</h3>
                     <p>To assess the product's usability, I rely on heuristic evaluations, following established guidelines like Nielsen's heuristics. These evaluations help uncover potential usability issues and areas for improvement in the product's design and interface.</p>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="column"></div>
             </div>
-            <div class="column-container col1">
+            <div class="column-container col1 segment">
                 <div class="column">
                     <h3>Measuring User Behavior patterns with Firebase Analytics</h3>
                     <p>Beyond the design, I delve into user behavior analysis. This involves examining user interactions with the product to identify usage patterns, preferences, and pain points. By understanding how users engage with the product, we can make informed decisions to optimize the user flow and enhance their experience.</p>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="column"></div>
             </div>
-            <div class="column-container col1">
+            <div class="column-container col1 segment">
                 <div class="column">
                     <h3>Streamlining User Flow Updates: The Power of Automation</h3>
                     <p>When I initially joined my current team, I was eager to make a positive impact. I noticed that the regular sprint user flow underwent frequent updates, often necessitating extensive manual adjustments for pixel precision and alignment. To streamline this process, I embarked on an initiative to introduce automation through auto layout techniques. I synchronized each screen using Figma's library and sync feature. While this automation introduced some complexity and required a bit of a learning curve for other team members when making edits, it didn't take long for them to appreciate the significant functionality and time-saving benefits it brought. </p>
