--- a/v2/journal/userflow-repository.html
+++ b/v2/journal/userflow-repository.html
@@ -60,7 +60,7 @@
     <div class="body">
     
     <div id="intro" class="section">
-            <h2>Understanding a Product, it’s user flow and user behaviour patterns</h2>
+            <h2>Understanding a Product,<br /> it’s user flow and user behaviour patterns</h2>
             <div class="column-container col1 segment">
                 <div class="column">
                     <p>When I join a new team and encounter a product for the first time, my initial focus is on understanding its user flow. I want to grasp how users navigate through the product, what actions they take, and what they experience. It's about getting a clear picture of the product's functionality and user journey.</p>
