--- a/v2/about/designer-asurion.html
+++ b/v2/about/designer-asurion.html
@@ -19,6 +19,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/css.css">
 <link rel="stylesheet" type="text/css" href="../css/about.css">
+<link rel="stylesheet" type="text/css" href="../css/casestudy.css">
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../css/device.css">
 
@@ -62,7 +63,7 @@
     <div id="intro" class="section">
         <div class="column-container col1">
             <div class="column">
-                <h2>Senior UX Designer with Asurion</h2>
+                <h2>Elevating User Experiences : A Senior UX Designers role at Asurion</h2>
                 <p>Over 3.5 years at Asurion I have progressed from a UX Engineer working within the IT department to a Senior Designer (2.5years) in the Product development departments UX design team. </p>
                 <p>In my current role I act as a Lead Designer on the organization’s primary app, au Tsukasapo. The Tsukasapo app is a premium tech support & solutions subscription service provided as part of a broader device protection plan for au customers (KDDI).</p>
                 <p><b>Other Projects</b></p>
@@ -72,55 +73,72 @@
                     <li>Insurance service platforms</li>
                     <li>Call center chat tools</li>
                 </ul>
-                <h3>UX & Product Teams</h3>
-                <p>In my role at Asurion I have acted as a lead and mentor within a team of 10-15 designers and researchers.</p>
-                <p>The UX team compromises a design director, manager, 4 senior designers,  6-8 designers as well as a 3 UX researchers.</p>
-                <p>Projects are agile and incorporate roadmap, backlog and regular sprint releases. Communication with UX, PM, Engineers, PA and QA teams are occur with regular syncs, standups and the usual weekly ceremonies.</p>
+                <!--h3>UX & Product Teams</h3>
+                <p>In my role at Asurion I have acted as a lead and mentor within a team of 10-15 designers and researchers. The UX team compromises a design director, manager, 4 senior designers,  6-8 designers as well as a 3 UX researchers.</p>
+                <p>Projects are agile and incorporate roadmap, backlog and regular sprint releases. In my senior role I am tasked to communicate and advocate UX internally and with PM, Engineers, PA and QA teams during regular syncs, standups and the usual weekly ceremonies.</p-->
             </div>
             <div class="column">
                 <span class="wrap"><span class="img bg-non"></span></span>
             </div>
         </div>
 
-        <div class="column-container col1">
+        <div class="column-container col1 segment">
             <div class="column">
                 
-                <h3>Responsibilities</h3>
-                <p>I’m a design generalist with a strong technical ability which has seen me take the lead on regular design sprints for core projects and also be dropped into new projects or tasks lacking resources with ease.</p>
-                <h4>Day to Day Design</h4>
-                <p>I take part in the end to end design process for various sprint based design tasks - including synthesis, discovery, concept design and handoff.</p>
+                <h3>Role and Responsibilities</h3>
+                <!--p>I’m a design generalist with a strong technical ability which has seen me lead and review regular design sprints for core projects and also be dropped into new projects or tasks which require my prompt expertise.</p>
+                <p><b>Day to Day Design</b></p>
+                <p>I lead the end to end design process for various sprint based design tasks - including synthesis, discovery, concept design, review and handoff.</p>
                 <p>I am also tasked with prototypes, illustration, animations, marketing material, video editting when the skill is needed.</p>
-                <h4>Communication</h4>
+                <p><b>Communication</b></p>
                 <ul>
-                    <li>Design Review of ongoing design tasks within a weekly design jam.</li>
+                    <li><b>Design Review</b> of ongoing design tasks within a weekly design jam.</li>
                     <li>Lead Designer on assigned tasks speaking to PM and DEV team members.</li>
                     <li>Mentorship of junior designers.</li>
                     <li>Anticipating future needs and initiate upstream design tasks and communication to wider team.</li>
                 </ul>
-                <h4>Technical</h4>
+                <p><b>Technical</b></p>
                 <ul>
                     <li>DesignOps for Figma Projects, Design Systems, Userflow, Toolkits and Templates.</li>
                     <li>Rapid ideation & iteration tasks.</li>
                     <li>Creation of Interactive Prototypes for sprint based Usability tests built from a prototype template.</li>
-                </ul>
-            </div>
+                </ul-->
             <div class="column"></div>
         </div>
 
 
-        <div class="column-container col1">
+        <div class="column-container col1 segment">
             <div class="column">
                 <h3>Challenges</h3>
                 <p>Asurion is a much larger organization than I had previously worked at and also consideration for client needs is very important. With a large decision making chain it's been difficult to make to this I have needed to advocate user needs and develop alliances more to get design centric solutions off the ground.</p>
-                <p>Asurion is a much larger organization than I had previously worked at and also consideration for client needs is very important. With a large decision making chain it's been difficult to make to this I have needed to advocate user needs and develop alliances more to get design centric solutions off the ground.</p>
+            </div>
+            <div class="column"></div>
+        </div>
+
+        <div class="column-container col1 segment">
+            <div class="column">
+                <h3>Achievements</h3>
+                <div class="special">
+                    <ul>
+                        <li>
+                            <h2>20% MAU Increase</h2>
+                            <p>Lead the design process for the continuous improvement task which saw a 20% increase in MAU over a 1 year period.</p>
+                        </li>
+                        <li>
+                            <h2>15% Increased Retention</h2>
+                            <p>Lead the end to end design process for the Tsukasapo ‘Learning Program’ feature which saw a 15% increase in retention rate KPI over a 4 month period.<</p>
+                        </li>
+                        <li>
+                            <h2>localization</h2>
+                            <p>Streamlined the localization of the Asurion US teams photo app for the au Photo Cloud project.</p>
+                        </li>
+                        <li>
+                            <h2>Continous Improvement Initiative</h2>
+                            <p>Advocated the adoption of A/B Testing and improved user behavior analysis via Google Analytics.</p>
+                        </li>
+                    </ul>
+                </div>
                 
-                <h3>Acheievements</h3>
-                <ul>
-                    <li>Lead the design process for the continuous improvement task which saw a 20% increase in MAU over a 1 year period.</li>
-                    <li>Lead the end to end design process for the Tsukasapo ‘Learning Program’ feature which saw a 15% increase in retention rate KPI over a 4 month period.</li>
-                    <li>Streamlined the localization of the Asurion US teams photo app for the au Photo Cloud project.</li>
-                    <li>Advocated the adoption of A/B Testing and improved user behavior analysis via Google Analytics.</li>
-                </ul>
             </div>
             <div class="column"></div>
         </div>
