--- a/v2/index.html
+++ b/v2/index.html
@@ -67,7 +67,7 @@
         <span class="img bg-non"></span>
     </div>
       <div class="column">
-        <h2>Pushing the needle while<br /> engaging my creative intuition.</h2>
+        <h2>Moving the needle while<br /> engaging my creative intuition.</h2>
         <p class="l b">Hi I'm Peter, a Product Designer based in Tokyo. As a Senior Designer at Asurion Japan, I lead the UX & UI design for clients au and docomo.</p>
         <p>Read more about my <a href="about/">background and experience</a> working as a Product Designer.</p>
       </div>
