--- a/v2/index.html
+++ b/v2/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="stylesheet" type="text/css" href="css/device.css">
 
-<meta name="theme-color" content="#FFF">
+<meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 <!-- Google tag (gtag.js) -->
@@ -41,7 +41,7 @@
 <script src="js/index.js"></script>
 
 </head>
-<body>
+<body class="screen-index">
     <div class="fullscreen-div">
         <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" alt="Centered Image">
     </div>
