--- a/v2/journal/design-principles.html
+++ b/v2/journal/design-principles.html
@@ -60,11 +60,46 @@
     <div class="body">
     
     <div id="intro" class="section">
-        <h2>Defining Design Principles for Tsukasapo</h2>
+        <h2>Defining Design Principles and Guidelines for the Tsukasapo app</h2>
         <div class="column-container col1">
             <div class="column">
-                <h3>title</h3>
-                <p>description</p>
+                <p>Key data from KPIs and user research showed that the initial user experience (provisioning and key action) and user comprehension of the tsukasapo needed re-evaluation.</p> 
+                <p>I had been part of the evolution of a design system for the app, which encompassed style values, components and guidelines for their application. However, there was an absence of documentation concerning the original design decisions and the reasoning behind them, leaving the team without well-defined criteria for potential redesigns.</p>
+                <h3>Introducing Design Principles</h3>
+                <p>To solve this, I wanted to define user centered design principles, rules, and guidelines. This would help bridge the gap between concept designs and make it easier for stakeholders to identify the issues and critique proposals.</p>
+                <h3>The Process</h3>
+                <p>I present the idea for broader discussion to both the UX and PM teams which led me to create and facilitate the following presentation and workshop:</p>
+                <p><b>Presentation : Introduction to design principles and guidelines</b></p>
+                <p>I began by giving a simple introduction to core design principles such as accessibility, simplicity and consistency and then broke a few down into guidelines and subsequent rules which were easy for stakeholders to relate to.</p>
+                <p>I then framed this with the guidelines I often follow which could be found in ‘don’t make me think’ - such as call to actions, scanability and visual hierachy.</p>
+                <p><b>Workshop Part 1</b></p>
+                <p>The first 1.5 hour workshop was a warm up to get participants focussed on user centered thinking which we began by on deconstructing 2 contrasting UI styles and then moved on to outline the user needs of our own app.</p>
+                <p>Steps</p>
+                <ul>
+                    <li>defining rules and guidelines for easy device smartphone UI which are commonly used by our users.</li>
+                    <li>defining rules and guidelines for apple music.</li>
+                    <li>defining guidelines and rules which meet our users needs.</li>
+                </ul>
+                <p>Goal</p>
+                <p>By introducing UI which our users often use and contrasting it with more contemporary UI I hoped to remove personal bias when discussing our own user needs.</p>
+                <p><b>Workshop Part 2</b></p>
+                <p>text</p>
+                <h3>Follow Up</h3>
+                <p>text</p>
+                <h3>Takeaway : Examples of Low Literacy & Senior User Guidelines</h3>
+                <p>text</p>
+                <h3>Takeaways : Looking at different UI Patterns</h3>
+                <p>text</p>
+                <h3>Summary</h3>
+                <p>The process brought design and product management teams closer and opened up ongoing discussions which allowed the design team to introduce design proposals for product backlog consideration.</p>
+                <p>The client could understand design reasoning more clearly which enabled a wider variety of user centered design improvements to be made which previously would have been rejected.</p>
+                <p>The design system became more of a team initiative which helped speed up its evolution and influence on team members.</p>
+                <h3>Insights</h3>
+                <ul>
+                    <li>Documentation of design decisions aren’t often ground breaking but without this information at hand it can create uncertainty and a lack of clear direction.</li>
+                    <li>Guidelines should be product-specific and grounded in user personas and research, rather than individual designer preferences.</li>
+                    <li>Introducing new principles can be challenging due to the need to maintain design consistency, however innovation can be measuring in controlled situations such as A/B testing, quantitative research or usability testing and should be weighed against the need for continuity.</li>
+                </ul>
             </div>
             <div class="column"></div>
         </div>
