--- a/v2/index.html
+++ b/v2/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div id="design-principles" class="article journal">
-                <h3 class="title">How I advocated & defined Design principles for the Tsukasapo app</h3>
+                <h3 class="title">Defining Design Principles and Guidelines for the Tsukasapo app</h3>
                 <p class="description">Design Principles are the building blocks of a design system which define its guidelines for all team members to follow.</p>
                 <p><a href="journal/design-principles.html">Read the Journal</a></p>
                 <span class="img"></span>
