--- a/v2/journal/design-principles.html
+++ b/v2/journal/design-principles.html
@@ -82,23 +82,48 @@
                 <p><b>Goal</b></p>
                 <p>By introducing UI which our users often use and contrasting it with more contemporary UI I hoped to remove personal bias when discussing our own user needs.</p>
                 <h3>Workshop Part 2</h3>
+                <p>The final 1 hour workshop was taken a week later and focussed on defining guidelines based on the user needs outlined in the first workshop.</p>
+                <p>The first 30 minutes saw small groups working together to outline guidelines and rules, after this we came together to sort the results into similiar areas and then rank them in terms of importance.</p>
                 <p>text</p>
                 <h3>Follow Up</h3>
                 <p>text</p>
                 <h3>Insights</h3>
-                <p><b>Examples of Low Literacy & Senior User Guidelines</b></p>
-                <p>text</p>
-                <p><b>Looking at different UI Patterns</b></p>
-                <p>text</p>
+                <p>While working on the task, I found it practical to divide the guidelines into usability and visual design categories. Creating usability guidelines was straightforward since we have many common requirements. But our main challenge was to consider users with low literacy levels empathetically.</p>
+                <p><b>Examples of usability guidelines for senior and low literacy users</b></p>
+                <ol>
+                    <li>
+                        <p><b>Clear and Simple Language:</b></p>
+                        <p>Use plain, straightforward language with short sentences and common words. Avoid jargon or complex terminology.</p>
+                        <p><b>Why it's important:</b> Low literacy and senior users may struggle with comprehension, so using clear and simple language ensures that they can easily understand the content and instructions within the app.</p>
+                    </li>
+                    <li>
+                        <p><b>Larger Text and Clear Fonts:</b></p>
+                        <p>Choose a legible font with a clear typeface and make sure the text is of an adequate size for easy reading.</p>
+                        <p><b>Why it's important:</b> Seniors often experience age-related vision changes, so larger, easily readable text and fonts are essential to prevent eye strain and enhance readability.</p>
+                    </li>
+                    <li>
+                        <p><b>Readable Contrasting Colors:</b></p>
+                        <p>Ensure a high contrast between text and background colors to improve readability.</p>
+                        <p><b>Why it's important:</b> High contrast enhances visibility, making it easier for users with reduced vision capabilities to read content and interact with the app without confusion.</p>
+                    </li>
+                </ol>
+                <p><b>Visual design principles and choosing a layout pattern</b></p>
+                <p>Visual design guidelines had some subjectivity as participants had different app usage and personal preferences. Designers also had their own likes, such as minimalism, focusing on the first screen view, or favoring card-based designs.</p>
+                <p>On the other hand, usability guidelines played a key role in helping us decide on layout patterns. By looking at the usability guidelines as a whole, it became more straightforward to pick the right layout.</p>
+                <p>We also realized that we could use different layout styles for specific page types within the app.</p>
                 <h3>Summary</h3>
-                <p>The process brought design and product management teams closer and opened up ongoing discussions which allowed the design team to introduce design proposals for product backlog consideration.</p>
-                <p>The client could understand design reasoning more clearly which enabled a wider variety of user centered design improvements to be made which previously would have been rejected.</p>
-                <p>The design system became more of a team initiative which helped speed up its evolution and influence on team members.</p>
+                <ol>
+                    <li>The process brought design and product management teams closer and opened up ongoing discussions which allowed the design team to introduce design proposals for product backlog consideration.</li>
+                    <li>The client could understand design reasoning more clearly which enabled a wider variety of user centered design improvements to be made which previously would have been rejected.</li>
+                    <li>The design system became more of a team initiative which helped speed up its evolution and influence on team members.</li>
+                </ol>
+                
                 <h3>What I learnt</h3>
                 <ul>
                     <li>Documentation of design decisions aren’t often ground breaking but without this information at hand it can create uncertainty and a lack of clear direction.</li>
                     <li>Guidelines should be product-specific and grounded in user personas and research, rather than individual designer preferences.</li>
                     <li>Introducing new principles can be challenging due to the need to maintain design consistency, however innovation can be measuring in controlled situations such as A/B testing, quantitative research or usability testing and should be weighed against the need for continuity.</li>
+                    <li>While it’s a good practice to set principles during the initial product definition phase, it’s also okay to create or adjust them whenever necessary, especially based on user feedback and insights.</li>
                 </ul>
             </div>
             <div class="column"></div>
